Adding files for class today